--- a/profil.html
+++ b/profil.html
@@ -14,25 +14,25 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/profil.css ">
+    <!-- <link rel="stylesheet" href="css/style.css "> -->
 </head>
 <body>
-    <!-- Header Section -->
+    <!---- Header Section ---->
     <header class="header">
-        <div class="container">
-            <a href="index.html" class="logo">Portfolio</a>
+        <a href="index.html" class="logo">Portfolio</a>
 
-            <nav class="navbar">
-                <a href="#accueil" class="active">Accueil</a>
-                <a href="#profil">Profil</a>
-                <a href="#projets">Projets</a>
-                <a href="#bts">BTS</a>
-                <a href="#veille">Veille</a>
-                <a href="#contact">Contact</a>
-            </nav>
+        <nav class="navbar">
+            <a href="#accueil">Accueil</a>
+            <a href="#profil" class="active">Profil</a>  
+            <a href="#projets">Projets</a>    
+            <a href="#bts">BTS</a>    
+            <a href="veille.html">Veille Technologique</a>    
+            <a href="#contact">Contact</a>    
+        </nav>
 
-            <div class="bx bx-moon" id="darkMode-icon"></div>
-            <div class="bx bx-menu" id="menu-icon"></div>
-        </div>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
     <!-- Profile Section -->
