--- a/profil.html
+++ b/profil.html
@@ -151,7 +151,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Hirusha Pethiyagoda. All Rights Reserved.</p>
-            <a href="#accueil" class="back-to-top"><i class='bx bx-up-arrow-alt'></i></a>
+            <a href="#profil" class="back-to-top"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
     </footer>
 
