Resolve all the problem stated in pdf for index

--- a/veille.html
+++ b/veille.html
@@ -19,11 +19,11 @@
         <a href="index.html" class="logo">Portfolio</a>
 
         <nav class="navbar">
-            <a href="#accueil" class="active">Accueil</a>
+            <a href="#accueil" >Accueil</a>
             <a href="#profil">Profil</a>  
             <a href="#projets">Projets</a>    
             <a href="#bts">BTS</a>    
-            <a href="veille.html">Veille Technologique</a>    
+            <a href="veille.html" class="active">Veille Technologique</a>    
             <a href="#contact">Contact</a>    
         </nav>
 
@@ -190,6 +190,6 @@
     </footer>
 
     <!---- Custom JS ---->
-    <script src="js/script.js"></script>
+   <script src="js/script.js"></script>>
 </body>
 </html>
